<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/carPrice"
            style="@style/styleForAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/CarPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPrice"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/YourCarPrice"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/carPrice"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/paymentTxt"
            style="@style/styleForAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/downPayment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carPrice" />

        <EditText
            android:id="@+id/paymentEdit"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/paymentAmountPlz"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentTxt" />

        <TextView
            android:id="@+id/loneTxt"
            style="@style/styleForAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/loanPeriod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentEdit" />

        <EditText
            android:id="@+id/editLoan"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/yourLoan"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/loneTxt"
            app:layout_constraintTop_toBottomOf="@+id/paymentEdit" />

        <TextView
            android:id="@+id/rateTxt"
            style="@style/styleForAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/interestRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loneTxt" />

        <EditText
            android:id="@+id/editInterest"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/carInterest"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/rateTxt"
            app:layout_constraintTop_toBottomOf="@+id/editLoan" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="152dp"
            android:fontFamily="sans-serif"
            android:onClick="clickHandlerFunction"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editInterest" />

        <TextView
            android:id="@+id/carLoanTxt"
            style="@style/styleForAll"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/carLoan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/carLoanEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateTxt" />

        <TextView
            android:id="@+id/carLoanEdit"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/carLoanTxt"
            app:layout_constraintTop_toBottomOf="@+id/editInterest" />

        <TextView
            android:id="@+id/interestEdit"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/interestTxt"
            app:layout_constraintTop_toBottomOf="@+id/carLoanEdit" />

        <TextView
            android:id="@+id/interestTxt"
            style="@style/styleForAll"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carLoanTxt" />

        <TextView
            android:id="@+id/monthlyTxt"
            style="@style/styleForAll"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/monthlyRepay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interestTxt" />

        <TextView
            android:id="@+id/monthlyEdit"
            style="@style/styleForAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/monthlyTxt"
            app:layout_constraintTop_toBottomOf="@+id/interestEdit" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result: "
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/carLoanTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout></layout>